# EQTesting

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: baseline_pd.yaml  split_universal.yaml  transfer_chile.yaml  transfer_greece.yaml
experiments/: results.csv  stead_analysis_20260423_195905.json  stead_analysis_20260423_200219.json
plans/: rungs_1_to_4.md
scripts/: analyze_stead.py  diagnose_rung1.py  train.py  transfer.py
src/eqxfer/: config.py
src/eqxfer/data/: dataset.py  filters.py  geological.py  samplers.py  splits.py  stead_loader.py  waveform_cache.py
src/eqxfer/evaluation/: alignment.py  embedding_probes.py  logger.py  metrics.py  transfer_eval.py
src/eqxfer/features/: pd_tauc.py  waveform.py
src/eqxfer/models/: pd_linear.py  split_transfer.py
src/eqxfer/training/: loops.py  losses.py  schedulers.py
tests/: test_features_reproducible.py  test_physics_branch_has_no_regional_input.py  test_splits_no_leakage.py
